--- a/.github/workflows/feeds.yml
+++ b/.github/workflows/feeds.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add pages/feeds/generated/*.json
+          git add pages/feeds/*.json
           git commit -m "Update RSS feeds" || echo "No changes"
           git push
 
